--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "xellanix-react",
 	"version": "1.1.2",
+	"description": "A react stylesheet and components from xellanix",
 	"main": "dist/xellanix.umd.js",
 	"module": "dist/xellanix.es.js",
 	"types": "dist/types/index.d.ts",
@@ -32,5 +33,13 @@
 		"dist",
 		"package.json",
 		"README.md"
-	]
+	],
+	"keywords": ["react", "xellanix", "stylesheets", "components"],
+	"author": "xellanix",
+	"license": "MIT",
+	"homepage": "https://github.com/xellanix/xellanix-react#",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/xellanix/xellanix-react.git"
+	}
 }
