--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "xellanix-react",
-	"version": "1.1.2",
+	"version": "1.1.3",
 	"description": "A react stylesheet and components from xellanix",
 	"main": "dist/xellanix.umd.js",
 	"module": "dist/xellanix.es.js",
@@ -34,7 +34,12 @@
 		"package.json",
 		"README.md"
 	],
-	"keywords": ["react", "xellanix", "stylesheets", "components"],
+	"keywords": [
+		"react",
+		"xellanix",
+		"stylesheets",
+		"components"
+	],
 	"author": "xellanix",
 	"license": "MIT",
 	"homepage": "https://github.com/xellanix/xellanix-react#",
