--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "xellanix-react",
-	"version": "2.1.0",
+	"version": "2.2.0",
 	"description": "A react stylesheet and components from xellanix",
 	"main": "dist/xellanix.umd.js",
 	"module": "dist/xellanix.es.js",
@@ -9,13 +9,11 @@
 		"build": "tsc -b && vite build"
 	},
 	"peerDependencies": {
-		"react": "^18.3.1",
-		"react-dom": "^18.3.1"
+		"react": "^18.3.1"
 	},
 	"devDependencies": {
 		"@types/node": "^22.0.0",
 		"@types/react": "^18.3.3",
-		"@types/react-dom": "^18.3.0",
 		"@vitejs/plugin-react": "^4.3.1",
 		"typescript": "^5.5.4",
 		"vite": "^5.3.4",
